# fabler

./: .gitignore  Cargo.toml  README.md
creation-tool/: eslint.config.js  index.html  package.json  tsconfig.json  tsfmt.json  vite.config.ts
creation-tool/src/: App.tsx  StoryContext.tsx  api.ts  bindings.ts  main.tsx  style.ts
creation-tool/src-tauri/: .env  Cargo.toml  story_nodes.db  tauri.conf.json
creation-tool/src-tauri/migrations/: 20240920202621_placeholder-node-table.sql  20240921215245_create-basic-story-structure.sql  20240928213940_restructure-story-to-page-relation.sql  20240929021404_add_start_to_stor.sql
creation-tool/src-tauri/src/: db.rs  main.rs
creation-tool/src/components/: Editable.tsx  Error.tsx  NewPageButton.tsx  PageCard.tsx  PageLink.tsx
creation-tool/src/hooks/: use-debounce.ts  use-map.ts
creation-tool/src/pages/: StartPage.tsx  StoryEditorPage.tsx
creation-tool/src/utilities/: routing.ts
engine/: package.json
